--- a/style.css
+++ b/style.css
@@ -46,6 +46,15 @@
     background-size: cover;
 }
 
+.fondo_trailers {
+
+    background-image: url('imagenes/fondos/trailers.jpg');
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+}
+
 .fondo_recuerda {
     background-image: url('imagenes/fondos/recuerda.jpg');
     background-repeat: no-repeat;
